# pyhc-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: phep3-compliance.yml  pip-list-readme-table.yml  publish.yml  pyhc-environment-compatibility.yml  test-pip-installation.yml  test.yml  unit-test-all-packages.yml  unit-test-hapiclient.yml  unit-test-plasmapy.yml  unit-test-pysat.yml  unit-test-pyspedas.yml  unit-test-spacepy.yml  unit-test-sunpy.yml  unit-tests-fixup.yml  unit-tests.yml
.github/workflows/unit-tests/: unit-test-hapiclient.yml  unit-test-plasmapy.yml  unit-test-pysat.yml  unit-test-spacepy.yml  unit-test-sunpy.yml
