[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhc-core"
version = "0.0.7"
description = "A package to install the core PyHC packages (except Kamodo)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Shawn Polson", email = "pyhc-confidential@lasp.colorado.edu" }
]
dependencies = [
    "hapiclient",
    "plasmapy",
    "pysat",
    "pyspedas",
    "spacepy",
    "sunpy[all]"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Source = "https://github.com/heliophysicsPy/pyhc-core"

[project.optional-dependencies]
tests = [
  "sunpy[tests]",
  "plasmapy[tests]",
  "pysat[test]",
  "deepdiff",
  "mth5",
  "obspy"
]
