[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhc-core"
version = "0.0.8"
description = "A package to install the core PyHC packages (except Kamodo)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Shawn Polson", email = "pyhc-confidential@lasp.colorado.edu" }
]

# SPEC 0 recommends that projects drop support for Python versions 3
# years after their initial release. See:
# https://scientific-python.org/specs/spec-0000
requires-python = ">=3.11"

dependencies = [
    "hapiclient",
    "plasmapy",
    "pysat",
    "pyspedas",
    "spacepy",
    "sunpy[all]"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Source = "https://github.com/heliophysicsPy/pyhc-core"

[project.optional-dependencies]
tests = [
  "sunpy[tests]",
  "pysat[test]",
  "deepdiff",
  "mth5",
  "obspy",
  # PlasmaPy moved its test deps from extras to dependency groups:
  "hypothesis>=6.150",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-filter-subpackage>=0.2",
  "pytest-regressions>=2.9.1",
  "pytest-rerunfailures>=16.1",
  "pytest-xdist>=3.8"
]
